# langchain_project_01

./: .example_env  main.py  pyproject.toml  text.py
app/: dietitian.py  dietitian_detail.py
app/api/: chat.py  rag.py  sessions.py
app/db/: sessions.db
app/emailAgent/: emailAgent.py  emailTool.py  test.py
app/models/: session.py
app/ragServer/: chat_history.py  ragServer.py  ragServerTool.py  ragUploade.py  test.py  test02.py  test03.py
chatdb/: my_app.db
chroma_dir/: chroma.sqlite3
common/: logger.py
config/: MySqlconfig.py  Settings.py
db/my_index.bm25/: corpus.jsonl  corpus.mmindex.json  params.index.json  vocab.index.json
schemas/: chat.py
scripts/: test_rag_stream.py
