[project]
name = "langchain-v3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.13"
dependencies = [
    "aiofiles>=25.1.0",
    "bm25s>=0.3.9",
    "dashscope>=1.26.0",
    "fastapi>=0.136.3",
    "jieba>=0.42.1",
    "langchain>=1.3.6",
    "langchain-chroma>=1.1.0",
    "langchain-deepseek>=1.1.0",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-milvus>=0.3.3",
    "langchain-mineru>=0.1.3",
    "langchain-ollama>=1.1.0",
    "langchain-tavily>=0.2.18",
    "langchain-text-splitters>=1.1.2",
    "langchain-unstructured>=1.0.1",
    "langgraph-checkpoint-mongodb>=0.4.0",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "msgpack>=1.2.1",
    "pymongo>=4.16.0",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.6.0",
    "torch>=2.12.1",
]

[tool.uv.extra-build-dependencies]
pkuseg = ["numpy"]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
